objects/GBU_Specialization_Plans__c.object
<CustomObject>
    <description>This Object stores all metrics for Busines Groups and Global Business Units.</description>
    <fields>
        <fullName>Business_Group__c</fullName>
        <inlineHelpText>The name of the HP business group responsible for the plan.</inlineHelpText>
        <label>Business Group</label>
        <picklist>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GBU_Specialization__c</fullName>
        <inlineHelpText>HP Global Business Unit. For example, ‘Printing’ is a PPS GBU, ‘BCS’ is a EG GBU, and Vertica is a SW GBU.  This is the level at which the metrics are planned.</inlineHelpText>
        <label>Global Business Unit</label>
        <picklist>
            <controllingField>Business_Group__c</controllingField>
            <picklistValues>
                <fullName>Mobility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Virtualization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workstation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LaserJet Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ink Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business PCs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Notebooks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workstations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Commercial Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thin Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other PSG Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Graphics Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inkjet and Printing Solutions (hardware only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LaserJet &amp; Enterprise Solutions (hardware only)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software and Web Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other IPG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS - Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ISS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Storage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS - Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vertica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autonomy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPFS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>JBPDetails__c</fullName>
        <formula>Joint_Business_Plan__r.Partner_Account__c +  TEXT(Joint_Business_Plan__r.BG__c)+ Joint_Business_Plan__r.Business_Relationship_jbp__c+ Joint_Business_Plan__r.Plan_Country__c+ Joint_Business_Plan__r.Location__c+ TEXT(Joint_Business_Plan__r.Sub_Bg__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JBPDetails</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JBPEndDate__c</fullName>
        <formula>Joint_Business_Plan__r.Plan_End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>JBPEndDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Joint_Business_Plan__c</fullName>
        <label>Joint Business Plan</label>
        <referenceTo>JBP__c</referenceTo>
        <relationshipName>GBU_Plans1</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Actual_FY_Sales__c</fullName>
        <label>Total FY Actual Sales</label>
        <summarizedField>Metrics__c.Current_FY_Actual_Total__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_FY_Actual_SGA__c</fullName>
        <label>Total FY Actual Partner Comp</label>
        <summarizedField>Metrics__c.Current_FY_Actual_Total__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner Compensation</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_FY_Allocated_MDF__c</fullName>
        <label>Total FY Allocated MDF</label>
        <summarizedField>Metrics__c.Total_Allocated_MDFAmount__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Market Development Fund</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_FY_Planned_SGA__c</fullName>
        <label>Total FY Planned Partner Comp</label>
        <summarizedField>Metrics__c.Current_FY_Planned_Total__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner Compensation</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_FY_Planned_Sales__c</fullName>
        <label>Total FY Planned Sales</label>
        <summarizedField>Metrics__c.Current_FY_Planned_Total__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_FY_Spent_MDF__c</fullName>
        <label>Total FY Spent MDF</label>
        <summarizedField>Metrics__c.Total_MDF_Spent_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Market Development Fund</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_MDF_for_Q1__c</fullName>
        <label>Total Planned MDF for Q1</label>
        <summarizedField>Metrics__c.Allocated_MDF_Amount_Q1__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Market Development Fund</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_MDF_for_Q2__c</fullName>
        <label>Total Planned MDF for Q2</label>
        <summarizedField>Metrics__c.Allocated_MDF_Amount_Q2__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Market Development Fund</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_MDF_for_Q3__c</fullName>
        <label>Total Planned MDF for Q3</label>
        <summarizedField>Metrics__c.Allocated_MDF_Amount_Q3__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Market Development Fund</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_SGA_for_Q1__c</fullName>
        <label>Total Planned Partner Comp for Q1</label>
        <summarizedField>Metrics__c.Current_FY_Planned_Q1__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner Compensation</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_SGA_for_Q2__c</fullName>
        <label>Total Planned Partner Comp for Q2</label>
        <summarizedField>Metrics__c.Current_FY_Planned_Q2__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner Compensation</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_SGA_for_Q3__c</fullName>
        <label>Total Planned Partner Comp for Q3</label>
        <summarizedField>Metrics__c.Current_FY_Planned_Q3__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Partner Compensation</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Sales_for_Q1__c</fullName>
        <label>Total Planned Sales for Q1</label>
        <summarizedField>Metrics__c.Current_FY_Planned_Q1__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Sales_for_Q2__c</fullName>
        <label>Total Planned Sales for Q2</label>
        <summarizedField>Metrics__c.Current_FY_Planned_Q2__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Planned_Sales_for_Q3__c</fullName>
        <label>Total Planned Sales for Q3</label>
        <summarizedField>Metrics__c.Current_FY_Planned_Q3__c</summarizedField>
        <summaryFilterItems>
            <field>Metrics__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Sales</value>
        </summaryFilterItems>
        <summaryForeignKey>Metrics__c.GbuSpecializationPlan__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Sub-Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SP - {0000}</displayFormat>
        <label>Sub-Plan ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sub-Plans</pluralLabel>
    <recordTypes>
        <fullName>Distributor</fullName>
        <active>true</active>
        <description>This Record Type is being used to Identify a Distributor Sub Plans. Ops will load the Record Type</description>
        <label>Distributor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Reseller</fullName>
        <active>true</active>
        <description>This Record Type is being used to Identify a Reseller Sub Plans. Ops will load the Record Type</description>
        <label>Reseller</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>JBP_Record_Type_Check</fullName>
        <active>true</active>
        <description>This Validation Rule throws error when a subplan record type is not same as the plan record type.</description>
        <errorConditionFormula>RecordType.DeveloperName  &lt;&gt;  Joint_Business_Plan__r.RecordType.DeveloperName</errorConditionFormula>
        <errorMessage>The record type for the plan and sub-plan must be the same</errorMessage>
    </validationRules>
</CustomObject>